src/styles/global.css
@import "tailwindcss";

@layer utilities {
  .font-balthazar {
    font-family: "Balthazar", serif;
  }

  .font-lexend {
    font-family: "Lexend", sans-serif;
    font-optical-sizing: auto;
  }

  .bg-toxic-green {
    background-color: #61FF74;
  }

  .border-toxic-green {
    border-color: #61FF74;
  }

}
.page-header {
  width: fit-content;
  position:relative;
  z-index:10;
}
.page-header::after {
  content:'';
  height: 20px;
  width: 100%;
  background-color: #61FF74;
  position:absolute;
  left:0;
  bottom:-7px;
  z-index:-1;
}

.highlight-marker {
  display: inline;
  background-image: linear-gradient(#61FF74, #61FF74);
  background-repeat: no-repeat;
  background-size: 100% 0.35em;
  background-position: 0 85%;
}

.bullet-point {
  position: relative;
  padding-left: 24px;
  list-style: none;
}

.bullet-point::before {
  content: "";
  position: absolute;
  left: 0;
  top: 0.75em;
  width: 12px;
  height: 12px;
  background-color: #61FF74;
  transform: translateY(-50%);
}

.styled-link {
  text-decoration-color: #61FF74;
}

p {
  padding-block:0 !important;
}

h2 {
  @apply text-2xl uppercase
}

p {
  @apply py-2;
}

